# crazyflie-kinect-localization

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: default.yaml  ekf_template.yaml
config/camera_calib/060314733847/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
launch/: crazyflie.launch  ekf_template.launch  kinect2_bridge.launch  localization.launch  pc_filter.launch
msg/: BallDetection.msg
rviz/: default.rviz
scripts/: color_detector.py  localizor.py  pc_detector.py  point2tf.py  transformPublisher.py
src/: cropbox_filter.cpp  get_centroid.cpp  pcl_filtering.cpp
